Clean up ServiceReferenceUtil
The methods here are stateless: make the class a proper utility class,
adjusting users.

Change-Id: Icc2770e4ec52f19db2305068c9340db73d3c6607
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>